user added, fixing JWT
